<resources>
    <string name="app_name">BeInTouch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="engage_express_connect">Engage. Express. Connect</string>
    <string name="logo">𝐁𝐞𝐈𝐧𝐓𝐨𝐮𝐜𝐡</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_logo">Sign Up</string>
    <string name="username">Username</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already have an acoount?</string>
    <string name="loginText">Login</string>
    <string name="buttontoback">buttonToBack</string>
    <string name="forgotpasswordText">Forgot\nPassword?</string>
    <string name="enter_your_email_and_reset_code_will_be_sent_to_your_email">Enter your email and reset code will be sent\nto your email</string>
    <string name="reset">RESET PASSWORD</string>
    <string name="log_out">Log out</string>
    <string name="chats">Chats</string>
    <string name="backtoaccounticon">backToAccountIcon</string>
    <string name="buttontosendmessage">buttonToSendMessage</string>
    <string name="inputmessage">inputMessage</string>
    <string name="buttontologout">buttonToLogOut</string>
    <string name="type_your_message">Type your message…</string>
    <string name="logoicon">logoIcon</string>
    <string name="statusOnline">Online</string>
    <string name="statusOffline">Offline</string>
    <string name="buttontofindusers">buttonToFindUsers</string>
    <string name="type_user_email">Type user email...</string>
    <string name="buttontodeletechatitem">buttonToDeleteChatItem</string>
    <string name="checking_deleting_chat">Do you want to delete this chat?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_the_chat">Delete the chat</string>
    <string name="deleteuserchatitem">deleteUserChatItem</string>
    <string name="add_user">Add friend</string>
    <string name="unreadmessage">unreadmessage</string>
    <string name="readmessage">readmessage</string>
    <string name="saveDataProfile">SAVE</string>
    <string name="profile">Profile</string>
    <string name="was">Was online: %s</string>
    <string name="your_current_password">Your current Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="isTyping">Typing…</string>
    <string name="remember">Remember me</string>
    <string name="delete_this_chat">Delete this chat?</string>
    <string name="rule">Search for a Conversation Partner \nby Email\nPlease, make sure that \nthe email was entered correctly</string>
    <string name="warning">The user does not exist in the application\nOr\nPlease make sure that the email was entered correctly</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="buttonclosepassword">buttonClosePassword</string>
    <string name="buttonopenpassword">buttonOpenPassword</string>
    <string name="trash">trash</string>
    <string name="buttontoclosedialog">buttonToCloseDialog</string>
    <string name="buttontoaddusertochats">buttonToAddUserToChats</string>
    <string name="delete">Delete</string>
</resources>