<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login">

    <View
        android:id="@+id/shape"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containerForLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textColor="#5d6ade"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/engage_express_connect"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerForLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerForLogo">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/email"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="#5d6ade">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="2dp"
                android:text="@string/password"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/forgotPassword"
                android:textColor="#2b599c"
                android:textSize="18sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#5d6ade">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <TextView
            android:id="@+id/buttonToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

   <LinearLayout
       android:gravity="center"
       android:layout_marginTop="30dp"
       app:layout_constraintTop_toBottomOf="@+id/containerForLogin"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:textSize="18sp"
           android:alpha="0.7"
           android:text="@string/don_t_have_an_account"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <TextView
           android:textSize="18sp"
           android:textStyle="bold"
           android:layout_marginStart="7dp"
           android:text="@string/sign_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>