<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Reset">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/buttonToBackToLoginFromReset"
            android:contentDescription="@string/buttontoback"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/left_arrow_svgrepo_com"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#2b599c" />

        <View
            android:id="@+id/shape"
            android:visibility="gone"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-100dp"
            android:background="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/resetLogo"
            android:visibility="visible"
            tools:visibility="visible"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/reset"
            android:layout_width="300dp"
            android:layout_height="300dp"/>


        <LinearLayout
            android:id="@+id/forgotPasswordContainer"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/resetLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signuplogo"
                android:textColor="#2b599c"
                android:text="@string/forgotpasswordText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/enter_your_email_and_reset_code_will_be_sent_to_your_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/email"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#5d6ade">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmailReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/buttonToReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>