<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Chats">

    <LinearLayout
        android:id="@+id/topContainer"
        android:padding="16dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/buttonToBackToChatsFromChat"
            android:contentDescription="@string/backtoaccounticon"
            android:src="@drawable/left_arrow"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/companionUserName"
            android:textSize="22sp"
            android:layout_marginStart="14dp"
            android:textColor="@color/white"
            tools:text="Jason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="2.4dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/green_circle"
            android:layout_width="15dp"
            android:layout_height="15dp"/>


    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/testRv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topContainer"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        tools:listitem="@layout/user_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:contentDescription="@string/inputmessage"
            android:id="@+id/inputMessageFromUser"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:contentDescription="@string/buttontosendmessage"
        android:id="@+id/buttonToSendMessage"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@+id/inputLayout"
        app:layout_constraintBottom_toBottomOf="@+id/inputLayout"
        app:layout_constraintEnd_toEndOf="@+id/inputLayout"
        android:src="@android:drawable/ic_menu_send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:tint="#2b599c" />


</androidx.constraintlayout.widget.ConstraintLayout>